--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,18 +1,30 @@
-header {
-    color: white;
-    background-color: black;
-    text-align: center;
-}
-
 .logo {
     width: 50px;
     height: 50px;
     align-items: center;
 }
 
-nav {
+.navbar {
+    display: inline;
+    padding-left: 100px;
+    padding-right: 100px;
     text-align: center;
 }
+
+nav {
+    text-align: center;
+    background-color: black;
+    padding: 100px;
+}
+
+.button {
+    color: white;
+}
+
+
+
+
+
 
 article {
     color: white;
